test/expected/k_explain_f_i.out
explain int S()
            ^
13: error: "S": previously declared as type: typedef struct S S
